--- a/remove_apache.yml
+++ b/remove_apache.yml
@@ -7,13 +7,33 @@
   - name: update repositiry index
     apt:
       update_cache: yes
+    when: ansible_distribution == "Ubuntu"
 
-  - name: remove apache and php for Ubuntu servers
+  - name: uninstall apache and php for Ubuntu servers
     apt:
       name: apache2
       state: absent
+    when: ansible_distribution == "Ubuntu"
 
   - name: remove php support for apache
     apt:
       name: libapache2-mod-php
       state: absent
+    when: ansible_distribution == "Ubuntu"
+
+  - name: update repositiry index
+    dnf:
+      update_cache: yes
+    when: ansible_distribution == "CentOS"
+
+  - name: remove apache and php for CentOS servers
+    dnf:
+      name: httpd
+      state: absent
+    when: ansible_distribution == "CentOS"
+
+  - name: remove php support for apache
+    dnf:
+      name: php
+      state: absent
+    when: ansible_distribution == "CentOS"
