--- a/install_apache.yml
+++ b/install_apache.yml
@@ -4,36 +4,20 @@
   become: true
   tasks:
 
-  - name: update repositiry index
+  - name: install apache and php packages for Ubuntu servers
     apt:
+      name: 
+        - apache2
+        - libapache2-mod-php
+      state: latest
       update_cache: yes
     when: ansible_distribution == "Ubuntu"
 
-  - name: install apache and php for Ubuntu servers
-    apt:
-      name: apache2
-      state: latest
-    when: ansible_distribution == "Ubuntu"
-
-  - name: add php support for apache
-    apt:
-      name: libapache2-mod-php
-      state: latest
-    when: ansible_distribution == "Ubuntu"
-
-  - name: update repositiry index
+  - name: install apache and php packages for CentOS servers
     dnf:
+      name: 
+        - httpd
+        - php
+      state: latest
       update_cache: yes
-    when: ansible_distribution == "CentOS"
-
-  - name: install apache and php for CentOS servers
-    dnf:
-      name: httpd
-      state: latest
-    when: ansible_distribution == "CentOS"
-
-  - name: add php support for apache
-    dnf:
-      name: php
-      state: latest
     when: ansible_distribution == "CentOS"
