--- a/site.yml
+++ b/site.yml
@@ -5,12 +5,14 @@
   pre_tasks:
 
   - name: install updates (CentOS)
+    tags: always
     dnf:
       update_only: yes
       update_cache: yes
     when: ansible_distribution == "CentOS"
 
   - name: install updates (Ubuntu)
+    tags: always
     apt:
       upgrade: dist
       update_cache: yes
@@ -22,6 +24,7 @@
   tasks:
 
   - name: install apache and php packages for Ubuntu servers
+    tags: apache,apache2,ubuntu
     apt:
       name: 
         - apache2
@@ -30,6 +33,7 @@
     when: ansible_distribution == "Ubuntu"
 
   - name: install apache and php packages for CentOS servers
+    tags: apache,centos,httpd
     dnf:
       name: 
         - httpd
@@ -43,12 +47,14 @@
   tasks:
 
   - name: install mariadb package for CentOS servers
+    tags: db,maridadb,ubuntu
     dnf:
       name: mariadb
       state: latest
     when: ansible_distribution == "CentOS"
 
   - name: install mariadb package for Ubuntu servers
+    tags: centos,db,maridadb
     apt:
       name: mariadb-server
       state: latest
@@ -56,6 +62,7 @@
 
 
 - hosts: file_servers
+  tags: samba
   become: true
   tasks:
 
