--- a/site.yml
+++ b/site.yml
@@ -48,7 +48,25 @@
       dest: /var/www/html/index.html
       owner: root
       group: root
-      mode: 0644    
+      mode: 0644
+
+
+- hosts: workstations
+  become: true
+  tasks:
+
+  - name: install unzip
+    package:
+      name: unzip
+
+  - name: install terraform
+    unarchive:
+      src: https://releases.hashicorp.com/terraform/0.14.7/terraform_0.14.7_linux_amd64.zip
+      dest: /usr/local/bin
+      remote_src: yes
+      mode: 0755
+      owner: root
+      group: root
 
 
 - hosts: db_servers
