--- a/site.yml
+++ b/site.yml
@@ -4,19 +4,33 @@
   become: true
   pre_tasks:
 
-  - name: install updates (CentOS)
+  - name: update repo cache (CentOS)
     tags: always
     dnf:
-      update_only: yes
       update_cache: yes
+    changed_when: false
     when: ansible_distribution == "CentOS"
 
-  - name: install updates (Ubuntu)
+  - name: update repo cache (Ubuntu)
     tags: always
     apt:
-      upgrade: dist
       update_cache: yes
+    changed_when: false
     when: ansible_distribution == "Ubuntu"
+
+
+- hosts: all
+  become: true
+  tasks:
+
+  - name: add public key for simone user
+    tags: always
+    authorized_key:
+      user: simone
+      state: present
+      key: "{{ item }}"
+    with_file:
+      - /home/ferry/.ssh/ansible.pub
 
 
 - hosts: workstations
